[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4"
serde = { verion = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
yew-router = "0.15.0"
reqwasm = "0.2"
